# Tomorrows-Legal-Assistance

./: .env.example  .gitignore  GEMINI.md  Makefile  PRESI.md  PROCESS.md  README.md  pyproject.toml  start_backend.sh
apertus/: apertus.py
backend/: __init__.py  main.py  utils.py
backend/agent/: UPDATED_IMPLEMENTATION.md  __init__.py  agent_workflow_diagram.mmd  demo.py  generate_png.py  graph.py  jupyter_utils.py  schema.py  schemas.py  state.py  test_agent.py  test_category_flow.py  test_rag_integration.py
backend/agent/nodes/: aggregate.py  categorize.py  ingest.py  time_and_cost.py  win_likelihood.py
backend/agent/prompts/: classify_case_category_prompt.md  classify_legal_field_prompt.md
backend/agent/tools/: categorize_case.py  estimate_cost.py  estimate_time.py  historic_cases.py  rag_swiss_law.py
backend/agent_with_tools/: BUSINESS_LOGIC_INTEGRATION.md  GEMINI.md  IMPLEMENTATION_SUMMARY.md  README.md  __init__.py  demo.py  generate_png.py  graph.py  policies.py  schemas.py  swiss_legal_agent_workflow.mmd  test_aggregate_explanation.py  test_estimator_integration.py  test_rag_integration.py
backend/agent_with_tools/misc/: demo.py  demo_business_logic_integration.py  jupyter_utils.py  swiss_legal_agent_workflow.html  view_diagram.py
backend/agent_with_tools/nodes/: __init__.py  aggregate.py  categorize.py  ingest.py  prepare_final_answer.py  time_and_cost.py  win_likelihood.py
backend/agent_with_tools/tests/: test_agent.py  test_backend_rag.py  test_business_logic.py  test_category_flow.py  test_rag.py  (+7 more)
backend/apertus/: __init__.py  model.py
backend/api/: __init__.py  routes.py
classifier/: classifier_chain.py
core/: config.py
data/: .gitattributes  bger-2024-3.csv
experts/: README.md  legal_claim_predictor.py
frontend/: .env.example  GEMINI.md  app.py  pyproject.toml
legal_vectors/: pyproject.toml
legal_vectors/legal_vectorizer/: generate_vector_store.py  query.py
legal_vectors/similar_cases_vectorizer/: generate_vector_store.py
scripts/: apertus_api_test.py  test_agent_with_tools_api.py
(+25 files in other folders)
