[project]
name = "tomorrows-legal-assistance"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.117.1",
    "langchain>=0.3.27",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "pyarrow>=21.0.0",
    "scikit-learn>=1.7.2",
    "tqdm>=4.67.1",
    "uvicorn>=0.37.0",
    "streamlit==1.50.0",
]
