[project]
name = "tomorrows-legal-assistance"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.117.1",
    "langchain>=0.3.27",
    "numpy>=2.3.3",
    "openai>=1.109.1",
    "pandas>=2.3.2",
    "pyarrow>=21.0.0",
    "python-dotenv>=1.1.1",
    "scikit-learn>=1.7.2",
    "tqdm>=4.67.1",
    "transformers>=4.56.2",
    "uvicorn>=0.37.0",
    "streamlit==1.50.0",
    "langgraph>=0.6.7",
    "langchain-openai>=0.3.33",
    "graphviz>=0.21",
    "pyppeteer>=2.0.0",
    "requests>=2.32.5",
    "pydantic>=2.11.9",
    "langchain-openai>=0.3.33",
    "pydantic-settings>=2.11.0",
    "chromadb>=1.1.0",
    "google-generativeai>=0.8.5",
]
